<resources>
    <string name="app_name" translatable="false">&appname;</string>
    <string name="developer_name" translatable="false">Teddy Rodriguez (TROD)</string>
    <string name="developer_email" translatable="false">theodore9214x@gmail.com</string>
    <string name="copyright" translatable="false">© 2018 Teddy Rodriguez</string>
    <string name="version_num" translatable="false">%1$s</string>
    <string name="activity_settings_name">Settings</string>
    <string name="fragment_at_a_glance_name">At a glance</string>
    <string name="fragment_food_list_name">Foods</string>
    <string name="activity_details_name">Details</string>
    <string name="activity_edit_item_name">Edit</string>
    <string name="activity_add_item_name">Add new food item</string>
    <string name="activity_capture_name">Capture</string>
    <string name="activity_sign_up_name">Create account</string>
    <string name="action_search">Search</string>
    <string name="action_settings" translatable="false">@string/activity_settings_name</string>
    <string name="action_share">Tell your friends</string>
    <string name="action_add_item">Add food item</string>
    <string name="action_add_item_camera">Scan a barcode or take a picture</string>
    <string name="action_add_item_text">Input text details</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete this item</string>
    <string name="action_try_again">Try again</string>
    <string name="action_add_photo_camera">Take a photo</string>
    <string name="action_add_photo_library">Choose from library</string>
    <string name="action_edit_item">Edit this food item</string>
    <string name="action_change_date_filter">Change date filter. Currently showing foods expiring within %1$s</string>
    <string name="action_add_count">Add count by 1</string>
    <string name="action_subtract_count">Subtract count by 1</string>
    <string name="action_add_photo">Add image</string>
    <string name="action_remove_photo">Remove this image</string>
    <string name="action_enable">Enable</string>
    <string name="action_set_expiry_date">Set expiry date</string>
    <string name="action_ok">OK</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_undo">Undo</string>
    <string name="wel_page_first_title">Welcome!</string>
    <string name="wel_page_first_description">Glad to have you on board!\n\nYou are one step closer to regaining control over whether your expiring foods make it in your belly, or in the trash.\n\n\nLet\'s take a quick peek at how &appname;
        can help you keep track of your foods.</string>
    <string name="wel_page_capture_title">Quickly add new items</string>
    <string name="wel_page_capture_description">Add items by scanning their barcode or taking their picture</string>
    <string name="wel_page_dates_title">Setting dates has never been simpler</string>
    <string name="wel_page_dates_description">Pick a date, or say it through your mic!\n\n(Mic input is disabled by default. Enable it through Settings)</string>
    <string name="wel_page_view_title">Easy At a Glance viewing</string>
    <string name="wel_page_view_description">Focus on foods close to expiring with help from clear headlines and filterable bar charts and lists</string>
    <string name="wel_page_notifications_title">Get notified!</string>
    <string name="wel_page_notifications_description">Hard keeping track of your foods? Get reminded when foods are going bad through daily notifications\n\nYou can customize your notifications through Settings</string>
    <string name="wel_page_save_title">Be in control</string>
    <string name="wel_page_save_description">This app is designed to help keep your money in your wallet by keeping food out of the trash. However, you make the final choice.\n\nBe responsible with your food!</string>
    <string name="wel_page_final_title">That\'s it!</string>
    <string name="wel_page_final_description">&appname; is really easy and quick to use. So let\'s get started!</string>
    <string name="at_a_glance_bar_chart_label">Dates bar chart</string>
    <string name="at_a_glance_date_range_label">Set date range</string>
    <string name="at_a_glance_bar_chart_header_count_none">No foods expiring %2$s</string>
    <string name="at_a_glance_bar_chart_header_count_one">1 food expiring %2$s</string>
    <string name="at_a_glance_bar_chart_header_count_many">%1$s foods expiring %2$s</string>
    <plurals name="at_a_glance_bar_chart_header_count">
        <item quantity="zero">@string/at_a_glance_bar_chart_header_count_none</item>
        <item quantity="one">@string/at_a_glance_bar_chart_header_count_one</item>
        <item quantity="other">@string/at_a_glance_bar_chart_header_count_many</item>
    </plurals>
    <string name="greeting_generic_1a">Hello</string>
    <string name="greeting_generic_1b">Hello there</string>
    <string name="greeting_generic_2a">Hi</string>
    <string name="greeting_generic_2b">Hi there</string>
    <string name="greeting_generic_3a">Hey</string>
    <string name="greeting_generic_3b">Hey there</string>
    <string name="greeting_morning">Good morning</string>
    <string name="greeting_afternoon">Good afternoon</string>
    <string name="greeting_day">Good day</string>
    <string name="greeting_evening">Good evening</string>
    <string-array name="greeting_generic">
        <item>@string/greeting_generic_1a</item>
        <item>@string/greeting_generic_1b</item>
        <item>@string/greeting_generic_2a</item>
        <item>@string/greeting_generic_2b</item>
        <item>@string/greeting_generic_3a</item>
        <item>@string/greeting_generic_3b</item>
    </string-array>
    <string-array name="greeting_noon_day">
        <item>@string/greeting_afternoon</item>
        <item>@string/greeting_day</item>
    </string-array>
    <string name="complete_greeting" translatable="false">%1$s, %2$s!</string>
    <string name="greeting_no_name" translatable="false">%1$s!</string>
    <string name="at_a_glance_summary_none">You have no foods expiring within %2$s</string>
    <string name="at_a_glance_summary_one">You have only %1$d food expiring within %2$s</string>
    <string name="at_a_glance_summary_many">You have %1$d foods expiring within %2$s</string>
    <plurals name="at_a_glance_summary">
        <item quantity="zero">@string/at_a_glance_summary_none</item>
        <item quantity="one">@string/at_a_glance_summary_one</item>
        <item quantity="other">@string/at_a_glance_summary_many</item>
    </plurals>
    <string name="at_a_glance_summary_none_no_within">You have no foods expiring %2$s</string>
    <string name="at_a_glance_summary_one_no_within">You have only %1$d food expiring %2$s</string>
    <string name="at_a_glance_summary_many_no_within">You have %1$d foods expiring %2$s</string>
    <plurals name="at_a_glance_summary_no_within">
        <item quantity="zero">@string/at_a_glance_summary_none_no_within</item>
        <item quantity="one">@string/at_a_glance_summary_one_no_within</item>
        <item quantity="other">@string/at_a_glance_summary_many_no_within</item>
    </plurals>
    <string name="at_a_glance_summary_postfix_none">, with no foods expiring %2$s</string>
    <string name="at_a_glance_summary_postfix_one">, with only 1 food expiring %2$s</string>
    <string name="at_a_glance_summary_postfix_many">, with %1$d foods expiring %2$s</string>
    <plurals name="at_a_glance_summary_postfix">
        <item quantity="zero">@string/at_a_glance_summary_postfix_none</item>
        <item quantity="one">@string/at_a_glance_summary_postfix_one</item>
        <item quantity="other">@string/at_a_glance_summary_postfix_many</item>
    </plurals>
    <string name="at_a_glance_summary_super_postfix_none">\u0020and no foods expiring %2$s</string>
    <string name="at_a_glance_summary_super_postfix_one">\u0020and only 1 food expiring %2$s</string>
    <string name="at_a_glance_summary_super_postfix_many">\u0020and %1$d foods expiring %2$s</string>
    <plurals name="at_a_glance_summary_super_postfix">
        <item quantity="zero">@string/at_a_glance_summary_super_postfix_none</item>
        <item quantity="one">@string/at_a_glance_summary_super_postfix_one</item>
        <item quantity="other">@string/at_a_glance_summary_super_postfix_many</item>
    </plurals>
    <string name="at_a_glance_list_header">Foods expiring within %1$s:</string>
    <string name="date_filter_x_days">%1$d days</string>
    <string name="date_weekly_filter_7_days_btn">7 days</string>
    <string name="date_weekly_filter_14_days_btn">14 days</string>
    <string name="date_weekly_filter_21_days_btn">21 days</string>
    <string name="date_weekly_filter_7_days_text">A week</string>
    <string name="date_weekly_filter_14_days_text">2 weeks</string>
    <string name="date_weekly_filter_21_days_text">3 weeks</string>
    <string name="expiry_msg_today">Expires today!</string>
    <string name="expiry_msg_tomorrow">Expires tomorrow!</string>
    <string name="expiry_msg_soon">Expires soon this %1$s</string>
    <string name="expiry_msg_next_dow">Expires next %1$s</string>
    <string name="expiry_msg_ordinal">Expires on the %1$s</string>
    <string name="expiry_msg_month_day">Expires on %1$s %2$d</string>
    <string name="expiry_msg_month_day_year">Expires on %1$s %2$d, %3$d</string>
    <string name="expiry_msg_generic">Expires %1$s</string>
    <string name="expiry_msg_generic_pp">Expiring %1$s</string>
    <string name="expiry_msg_num_days">Expires in %1$s %2$s</string>
    <string name="expiry_msg_past_yesterday">Expired yesterday</string>
    <string name="expiry_msg_past_ordinal">Expired on the %1$s</string>
    <string name="expiry_msg_past_month_day">Expired on %1$s %2$d</string>
    <string name="expiry_msg_past_month_day_year">Expired on %1$s %2$d, %3$d</string>
    <string name="expiry_msg_past_this">Expired this past %1$s</string>
    <string name="expiry_msg_past_last">Expired last %1$s</string>
    <string name="expiry_msg_past_generic">Expired %1$s</string>
    <string name="expiry_msg_past_num_days">Expired %1$s %2$s ago</string>
    <string name="date_yesterday">Yesterday</string>
    <string name="date_today">Today</string>
    <string name="date_tomorrow">Tomorrow</string>
    <string name="date_today_or_tomorrow">Today or tomorrow</string>
    <string name="date_soon">Soon</string>
    <string name="date_last_week">Last week</string>
    <string name="date_next_week">Next week</string>
    <string name="date_this_week">This week</string>
    <string name="food_other_info_label">More info</string>
    <string name="food_brand_label">Brand</string>
    <string name="food_size_label">Size</string>
    <string name="food_weight_label">Weight</string>
    <string name="food_notes_label">Notes</string>
    <string name="food_meta_data_label">Meta-data</string>
    <string name="food_barcode_label">Barcode</string>
    <string name="food_input_type_label">Input type</string>
    <string name="food_input_type_barcode">Scanned by barcode</string>
    <string name="data_attribution_upcitemdb">Barcode data provided by upcitemdb</string>
    <string name="data_attribution_google_imgrec">Image data provided by Google Image Labeling</string>
    <string name="edit_clear_brand">Clear the brand name</string>
    <string name="edit_clear_size">Clear the food size</string>
    <string name="edit_clear_weight">Clear the food weight</string>
    <string name="edit_clear_notes">Clear the notes</string>
    <string name="auth_existing_account">Already a member? Log-in</string>
    <string name="auth_signup_button">Sign up!</string>
    <string name="auth_agreement_sign_up">By signing up, you agree to our %1$s and that you have read our %2$s.</string>
    <string name="add_photo_instruction">How do you want to add an image?</string>
    <string name="add_item_instruction">How do you want to add an item?</string>
</resources>