<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_detail_meta_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/food_meta_data_label"
        android:textColor="@color/textColorPrimary"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_detail_barcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:tint="@color/icon_tint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_meta_label"
        app:srcCompat="@drawable/ic_barcode_black_24dp" />

    <ImageView
        android:id="@+id/iv_detail_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:tint="@color/icon_tint"
        app:layout_constraintStart_toStartOf="@+id/iv_detail_barcode"
        app:layout_constraintTop_toBottomOf="@+id/iv_detail_barcode"
        app:srcCompat="@drawable/ic_edit_black_24dp" />

    <TextView
        android:id="@+id/tv_detail_barcode_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/food_barcode_label"
        android:textColor="@color/textColorPrimary"
        app:layout_constraintBottom_toBottomOf="@+id/iv_detail_barcode"
        app:layout_constraintStart_toEndOf="@+id/iv_detail_barcode"
        app:layout_constraintTop_toTopOf="@+id/iv_detail_barcode" />

    <TextView
        android:id="@+id/tv_detail_input_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/food_input_type_label"
        android:textColor="@color/textColorPrimary"
        app:layout_constraintBottom_toBottomOf="@+id/iv_detail_input"
        app:layout_constraintStart_toStartOf="@+id/tv_detail_barcode_label"
        app:layout_constraintTop_toTopOf="@+id/iv_detail_input" />

    <TextView
        android:id="@+id/tv_detail_barcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/textColorPrimaryLight"
        app:layout_constraintBottom_toBottomOf="@+id/tv_detail_barcode_label"
        app:layout_constraintStart_toStartOf="@+id/detail_guideline_40"
        app:layout_constraintTop_toTopOf="@+id/tv_detail_barcode_label"
        tools:text="1330002918470" />

    <TextView
        android:id="@+id/tv_detail_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/textColorPrimaryLight"
        app:layout_constraintBottom_toBottomOf="@+id/tv_detail_input_label"
        app:layout_constraintStart_toStartOf="@+id/tv_detail_barcode"
        app:layout_constraintTop_toTopOf="@+id/tv_detail_input_label"
        tools:text="@string/food_input_type_barcode" />

    <android.support.constraint.Guideline
        android:id="@+id/detail_guideline_40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.4" />

    <TextView
        android:id="@+id/tv_detail_credit_upcitemdb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/data_attribution_upcitemdb"
        android:textColor="@color/textColorPrimaryLight"
        app:layout_constraintStart_toStartOf="@+id/iv_detail_input"
        app:layout_constraintTop_toBottomOf="@+id/iv_detail_input" />

    <TextView
        android:id="@+id/tv_detail_credit_googleimgrec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/data_attribution_google_imgrec"
        android:textColor="@color/textColorPrimaryLight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_detail_credit_upcitemdb"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_credit_upcitemdb" />

</android.support.constraint.ConstraintLayout>