<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_bottom_sheet_capture_chooser"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/bottom_sheet_item_margins"
        android:gravity="center_vertical"
        android:text="@string/add_photo_instruction"
        android:textColor="@color/textColorPrimaryLight" />

    <LinearLayout
        android:id="@+id/action_add_photo_camera"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottom_sheet_item_height"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal">

        <ImageView
            style="@style/AppTheme.Icon.BottomSheetIcon"
            app:srcCompat="@drawable/ic_add_a_photo_black_24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/bottom_sheet_item_margins"
            android:text="@string/action_add_photo_camera"
            android:textColor="@color/textColorPrimary" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/action_add_photo_library"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottom_sheet_item_height"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal">

        <ImageView
            style="@style/AppTheme.Icon.BottomSheetIcon"
            app:srcCompat="@drawable/ic_photo_library_black_24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/bottom_sheet_item_margins"
            android:text="@string/action_add_photo_library"
            android:textColor="@color/textColorPrimary" />

    </LinearLayout>

</LinearLayout>